# OOP-QTCreator

./: .gitignore  README.md
C#/: C#.sln  Footballer.cs  Menu.cs  Program.cs  Sportsman.cs  SportsmansGroup.cs  Utils.cs
LR3_Ilichev/: AddDialog.h  AddDialog.ui  Addition.cpp  CMakeLists.txt  DialogIlichev.h  Footballer.cpp  Footballer.h  MainWindowIlichev.cpp  MainWindowIlichev.h  MainWindowIlichev.ui  Serialize.h  Sportsman.cpp  Sportsman.h  SportsmanWidget.cpp  SportsmanWidget.h  SportsmansGroup.cpp  SportsmansGroup.h  main.cpp
QT Creator/: AddDialog.cpp  Addition.h  DialogIlichev.cpp  DialogIlichev.ui  Footballer.cpp  Footballer.h  MainWindowIlichev.cpp  MainWindowIlichev.ui  SportsmanWidget.cpp  SportsmansGroup.cpp  SportsmansGroup.h
VS/: Addition.h  Footballer.cpp  Footballer.h  Menu.cpp  Sportsman.cpp  Sportsman.h  SportsmansGroup.cpp
С#_Desktop_Application/C#_Form/MyAppIlichev/: Footballer.cs  Form.Designer.cs  Form.cs  Form.resx  Program.cs  Sportsman.cs  SportsmanGroup.cs
С#_Desktop_Application/SG/: Footballer.h  SG.sln  SG.vcxproj  SG.vcxproj.filters  Sportsman.h  SportsmansGroup.h  dllmain.cpp  pch.h
